Revert "BUGFIX z-index"
This reverts commit 1353d5ea913e42e5e41016d3badca3cf62ab5fc5.

--- a/src/components/MainMap/index.css
+++ b/src/components/MainMap/index.css
@@ -47,7 +47,6 @@
 
 
 .map{
-	z-index: 1;
 	width: 100%;
 	height: 100%;
 }
